--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body{
 header{
     background: var(--dark);
     /* background: url(../img/ram-pic-1.jpg); */
-    clip-path:polygon(0 0, 100% 0, 100% 100%, 75% 92%, 0 100%);
+    clip-path:polygon(0 0, 100% 0, 100% 100%, 75% 97%, 0 100%);
 }
 .container{
     max-width: 1152px;
@@ -47,6 +47,30 @@ header{
     margin:0 auto;
    
 }
+
+@media (min-width:576px) {
+    .container{
+        max-width: 540px;
+    }
+}
+
+@media (min-width:768px) {
+    .container{
+        max-width: 720px;
+    }
+}
+@media (min-width:992px) {
+    .container{
+        max-width: 960px;
+    }
+}
+
+@media (min-width:1200px) {
+    .container{
+        max-width: 1152px;
+    }
+}
+
 #navbar_smallscreen{
     /* display:; */
 
